content/en/docs/04/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-web-go
spec:
  selector:
    matchLabels:
      app: example-web-go
  template:
    metadata:
      labels:
        app: example-web-go
    spec:
      containers:
        - name: example-web-go
          image: quay.io/acend/example-web-go
