content/en/docs/04/ingress-netcetera.template.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-web-go
  annotations:
    kubernetes.io/ingress.class: "nginx-external"
spec:
  rules:
    - host: example-web-go-<namespace>.training.test.netcetera.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: example-web-go
                port: 
                  number: 5000
