content/en/docs/04/ingress.template.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-web-go
spec:
  rules:
    - host: example-web-go-<namespace>.<domain>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: example-web-go
                port: 
                  number: 5000
